Add VerifyUserIdentity & UserHasExistsByUsername
