# src/CSharp/EasyMicroservices.AuthenticationsMicroservice.Domain/Contracts/Requests/UserHasExistsByUsernameRequestContract.cs
@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace EasyMicroservices.AuthenticationsMicroservice.Contracts.Requests
+{
+    public class UserHasExistsByUsernameRequestContract
+    {
+        public string Username { get; set; }
+    }
+}
